--- a/src/pages/Popup/translations/en.json
+++ b/src/pages/Popup/translations/en.json
@@ -1,4 +1,5 @@
 {
   "Search address identity": "Search address identity",
-  "title.language": "LANGUAGE"
+  "title.language": "LANGUAGE",
+  "title.setsearch": "SEARCH"
 }
